--- a/main/timeline/src/styles.css
+++ b/main/timeline/src/styles.css
@@ -1,7 +1,11 @@
+@import url("https://use.typekit.net/kgv5xxb.css");
+
 body {
   margin: 0;
   padding: 0;
-  font-family: Helvetica, sans-serif;
+  font-family: agenda, sans-serif;
+  font-weight: 400;
+  font-style: normal;
   /* color: aliceblue; */
 }
 a,
@@ -11,7 +15,7 @@ a:visited {
 }
 #map {
   /* top: 100px;
-    left: 200px; */
+  left: 200px; */
   height: 100vh;
   width: 100vw;
   position: fixed;
@@ -48,10 +52,10 @@ a:visited {
 #features p,
 h1,
 h2 {
-  border-radius: 6px;
+  /* border-radius: 6px;
   background-color: rgba(5, 3, 7, 0.1);
   font-size: 1.5em;
-  color: aliceblue;
+  color: aliceblue; */
 }
 
 .textbox {
@@ -61,15 +65,18 @@ h2 {
   margin-left: 5rem;
   /* margin-bottom: 60rem; */
   /* z-index: 999; */
-  border-radius: 4px;
-  /* opacity: 0.925; */
+  border-radius: 10px;
+  opacity: 0.925;
   -webkit-filter: drop-shadow(0 2px 4px rgba(59, 59, 61, 0.4));
   filter: drop-shadow(0 2px 4px rgba(59, 59, 61, 0.4));
-  background-color: rgba(126, 132, 138, 0.205);
-  color: #fff;
+  /* background-color: rgba(126, 132, 138, 0.205); */
+  background-color: rgba(26, 28, 29, 0.95);
+
+  color: rgba(255, 250, 240, 0.9);
   border: 1px solid hsla(0, 0%, 43.9%, 0.2);
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
+  font-size: 2em;
 }
 
 .hidden {
